# lrparsers

./: .gitignore  LICENSE.md  README.md  TODO  grammar.py  harness.py  lrparser.mk  makedep.py  makefile  parser.py  parser_faster.py  pyproject.toml  sql.py  wrap.py
dingus/: about.md  dingus.html  dingus.js  index.html  srvit.py  style.css  worker.js
examples/: .gitignore  grammar.py  lens.py  resilient.py  sql.py  sqlsorta.py
historical/: README.md  parser.py
parser/: __init__.py  emacs.py  generated_source.py  parser.py  runtime.py  tree_sitter.py  wadler.py
parser/wadler/: __init__.py  builder.py  runtime.py
tests/: test_error_recovery.py  test_generated_source.py  test_grammar.py  test_lexer.py  test_wadler.py
