[project]
name = "lrparsers"
descrption = "a small LR parser generator library"
authors = [
    {name = "John Doty", email = "john@d0ty.me"},
]
classifiers = [
  "Private :: Do Not Upload", # Probably.
  "License :: OSI Approved :: MIT License",
]
version = "0.1.0"
dependencies = []
requires-python = ">=3.12"
readme = "README.md"

[tool.black]
line-length=100

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
    "hypothesis>=6.111.1",
]

[tool.pyright]
exclude = ["historical", ".venv"]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
