[project]
name = "lrparsers"
descrption = "a small LR parser generator library"
authors = [
    {name = "John Doty", email = "john@d0ty.me"},
]
classifiers = [
  "Private :: Do Not Upload", # Probably.
  "License :: OSI Approved :: MIT License",
]
version = "0.8"
dependencies = []
requires-python = ">=3.12"
readme = "README.md"

[tool.black]
line-length=100

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "hypothesis>=6.111.1",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
    "hypothesis>=6.111.1",
]

[tool.pdm.build]
includes = [
   "parser/tree_sitter.py",
   "parser/runtime.py",
   "parser/generated_source.py",
   "parser/parser.py",
   "parser/emacs.py",
   "parser/wadler/runtime.py",
   "parser/wadler/builder.py",
   "parser/wadler/__init__.py",
   "parser/__init__.py",
]

[tool.pyright]
exclude = ["historical", ".venv"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
norecursedirs = "tree-sitter-fine"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
